force-app/main/default/objects/Opportunity/fields/LegacyStageValue__c.field-meta.xml
<CustomField>
    <fullName>LegacyStageValue__c</fullName>
    <label>Legacy Stage Value</label>
    <description>Original stage value from source system before migration mapping</description>
    <type>Text</type>
    <length>100</length>
</CustomField>